// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="undefined rounded-lg p-4 shadow-md"
  >
    <div
      aria-label="Accordion"
      class="px-2 w-full"
      data-orientation="vertical"
    >
      <div
        aria-label="Accordion Item 1"
      >
        <h2>
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            id=":r0:"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
              >
                <span
                  class="py-4 text-base font-bold leading-6"
                >
                  Accordion Item 1
                </span>
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            >
              <div
                class="ease transition-transform duration-300 rotate-0"
              >
                <svg
                  data-testid="arrow-left-icon"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.9998 19.9201L8.47984 13.4001C7.70984 12.6301 7.70984 11.3701 8.47984 10.6001L14.9998 4.08008"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-miterlimit="10"
                    stroke-width="1.5"
                  />
                </svg>
              </div>
            </span>
          </button>
        </h2>
      </div>
      <hr
        class="shrink-0 border-none w-full bg-[#8E8C99] h-px"
        role="separator"
      />
      <div
        aria-label="Accordion Item 2"
      >
        <h2>
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            id=":r2:"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
              >
                <span
                  class="py-4 text-base font-bold leading-6"
                >
                  Accordion Item 2
                </span>
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            >
              <div
                class="ease transition-transform duration-300 rotate-0"
              >
                <svg
                  data-testid="arrow-left-icon"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.9998 19.9201L8.47984 13.4001C7.70984 12.6301 7.70984 11.3701 8.47984 10.6001L14.9998 4.08008"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-miterlimit="10"
                    stroke-width="1.5"
                  />
                </svg>
              </div>
            </span>
          </button>
        </h2>
      </div>
      <hr
        class="shrink-0 border-none w-full bg-[#8E8C99] h-px"
        role="separator"
      />
      <div
        aria-label="Accordion Item 3"
      >
        <h2>
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            id=":r4:"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
              >
                <span
                  class="py-4 text-base font-bold leading-6"
                >
                  Accordion Item 3
                </span>
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            >
              <div
                class="ease transition-transform duration-300 rotate-0"
              >
                <svg
                  data-testid="arrow-left-icon"
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M14.9998 19.9201L8.47984 13.4001C7.70984 12.6301 7.70984 11.3701 8.47984 10.6001L14.9998 4.08008"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-miterlimit="10"
                    stroke-width="1.5"
                  />
                </svg>
              </div>
            </span>
          </button>
        </h2>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MultiNodeAccordion matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="undefined rounded-lg p-4 shadow-md"
  >
    <div
      aria-label="Accordion"
      class="px-2 w-full"
      data-orientation="vertical"
    >
      <div
        aria-label="Accordion Item 1"
      >
        <h2>
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            id=":r0:"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
              >
                <span
                  class="text-base font-bold leading-6"
                >
                  Accordion Item 1
                </span>
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            >
              <div
                class="ease transition-transform duration-300 rotate-0"
              >
                <img
                  alt="Arrow Icon"
                  height="16"
                  src="/downArrow.svg"
                  width="16"
                />
              </div>
            </span>
          </button>
        </h2>
      </div>
      <div
        aria-label="Accordion Item 2"
      >
        <h2>
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            id=":r2:"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
              >
                <span
                  class="text-base font-bold leading-6"
                >
                  Accordion Item 2
                </span>
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            >
              <div
                class="ease transition-transform duration-300 rotate-0"
              >
                <img
                  alt="Arrow Icon"
                  height="16"
                  src="/downArrow.svg"
                  width="16"
                />
              </div>
            </span>
          </button>
        </h2>
      </div>
      <div
        aria-label="Accordion Item 3"
      >
        <h2>
          <button
            aria-expanded="false"
            class="flex py-4 w-full h-full gap-3 items-center tap-highlight-transparent outline-none data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 transition-opacity"
            id=":r4:"
            type="button"
          >
            <div
              class="flex-1 flex flex-col text-start"
            >
              <span
                class="text-foreground text-medium"
              >
                <span
                  class="text-base font-bold leading-6"
                >
                  Accordion Item 3
                </span>
              </span>
            </div>
            <span
              aria-hidden="true"
              class="text-default-400 transition-transform rotate-0 data-[open=true]:-rotate-90 rtl:-rotate-180 rtl:data-[open=true]:-rotate-90"
            >
              <div
                class="ease transition-transform duration-300 rotate-0"
              >
                <img
                  alt="Arrow Icon"
                  height="16"
                  src="/downArrow.svg"
                  width="16"
                />
              </div>
            </span>
          </button>
        </h2>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
